--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,7 +74,7 @@ label{
 body > header{
 	width: 100%;
 	height: 33px;
-	background-image: url('/img/elements/texture-png1.png');
+	background-image: url('/img/texture-png1.png');
 	box-shadow: 0 0 5px rgb(37, 37, 37);
 	position: fixed;
 
