--- a/public/css/src/media.css
+++ b/public/css/src/media.css
@@ -47,15 +47,15 @@
     margin: 0!important;
 }
 .app-subheader.x--menu .menu-item__bar {
-    margin-left: 8px!important; 
+    margin-left: 8px!important;
 }
 .map-browse {
-    bottom: -2px!important;
+    bottom: 0px!important;
     width: 100%!important;
     right: 0!important;
     left: 0!important;
     justify-content: center!important;
-    height: 60px!important;
+    height: 54px!important;
 }
 .seek-map-browser-places.pac-container {
     bottom: 44px!important;
@@ -212,5 +212,22 @@ textarea,
 }
 .me-item .action {
     top: -20px!important;
+}
+
+.be-request {
+    position: static;
+    flex-shrink: 0;
+    height: 100px;
+}
+.be-usernames {
+    flex-shrink: 0;
+    height: 70px;
+}
+
+.be-inview-address {
+    flex-shrink: 0;
+}
+
+.be-pictures {
 }
 }
