--- a/public/css/src/media.css
+++ b/public/css/src/media.css
@@ -1,234 +1,250 @@
 @media (max-width: 1000px) {
-.app-header__logo {
-    display: none;
-}
+    .app-header__logo {
+        display: none;
+    }
 }
 
 @media (max-width: 500px) {
-* {
-    cursor: pointer!important;
-}
-.x--mb {
-    display: flex!important;
-}
-.app-section {
-    padding-top: 45px!important;
-}
-.app-logout,
-.app-subheader.x--menu h3,
-.settings-input__explanation,
-.me-item__explanation,
-.me .icon-item,
-.settings-input__icon,
-.settings-input__label.x--lang,
-.search-filters-section__explanations,
-.be-dates__count,
-.be-create-row__explanations,
-.app-subheader.x--map,
-.modal-search__input {
-    display: none!important;
-}
-.be-create,
-.notifications-panel,
-.chat,
-.slide,
-.search-filters,
-.menu-section.x--cheers .segment,
-.empty,
-.settings__button.x--delete,
-.settings__button,
-.map-browse input {
-    width: 100%!important;
-}
-.modal {
-    width: 80%!important;
-}
-.settings-input-label {
-    margin: 0!important;
-}
-.app-subheader.x--menu .menu-item__bar {
-    margin-left: 8px!important;
-}
-.map-browse {
-    bottom: 0px!important;
-    width: 100%!important;
-    right: 0!important;
-    left: 0!important;
-    justify-content: center!important;
-    height: 54px!important;
-}
-.seek-map-browser-places.pac-container {
-    bottom: 44px!important;
-    width: 100%!important;
-    left: 0!important;
-    right: 0!important;
-}
-.map__icon.x--change-location {
-    z-index: 100!important;
-}
-.map__icon.x--change-location,
-.map__icon.x--geoloc {
-    bottom: 4px!important;
-}
-.map-zoom {
-    bottom: 70px!important;
-}
-.picture,
-.picture-icon {
-    width: 220px!important;
-    height: 220px!important;
-}
+    * {
+        cursor: pointer!important;
+    }
+    .x--mb {
+        display: flex!important;
+    }
+    .app-section {
+        padding-top: 45px!important;
+    }
+    .app-logout,
+    .app-subheader.x--menu h3,
+    .settings-input__explanation,
+    .me-item__explanation,
+    .me .icon-item,
+    .settings-input__icon,
+    .settings-input__label.x--lang,
+    .search-filters-section__explanations,
+    .be-dates__count,
+    .be-create-row__explanations,
+    .app-subheader.x--map,
+    .modal-search__input {
+        display: none!important;
+    }
+    .be-create,
+    .notifications-panel,
+    .chat,
+    .slide,
+    .search-filters,
+    .menu-section.x--cheers .segment,
+    .empty,
+    .settings__button.x--delete,
+    .settings__button,
+    .map-browse input {
+        width: 100%!important;
+    }
+    .modal {
+        width: 80%!important;
+    }
+    .settings-input-label {
+        margin: 0!important;
+    }
+    .app-subheader.x--menu .menu-item__bar {
+        margin-left: 8px!important;
+    }
+    .map-browse {
+        bottom: 0px!important;
+        width: 100%!important;
+        right: 0!important;
+        left: 0!important;
+        justify-content: center!important;
+        height: 54px!important;
+    }
+    .seek-map-browser-places.pac-container {
+        bottom: 42px!important;
+        width: 100%!important;
+        left: 0!important;
+        right: 0!important;
+    }
+    .map__icon.x--change-location {
+        z-index: 100!important;
+    }
+    .map__icon.x--change-location,
+    .map__icon.x--geoloc {
+        bottom: 4px!important;
+    }
+    .map-zoom {
+        bottom: 70px!important;
+    }
+    .picture,
+    .picture-icon {
+        width: 220px!important;
+        height: 220px!important;
+    }
 
-.picture-icon {
-    display: none;
-}
-.picture-icon i {
-    /* display: none; */
-}
-input,
-textarea,
-.settings-input__label {
-    font-size: 13px!important;
-}
-.settings-input__label.x--settings-btn {
-    display: none!important;
-}
-.invite-friends-popup {
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 220px;
-    flex-flow: column nowrap;
-    background: rgba(255, 255, 255, .8);
-}
-.invite-friends-popup > div {
-    margin: 10px 0;
-}
-.invite-friends-popup-message {
-    text-align: center;
-    margin: 10px 0;
-    flex-shrink: 0;
-}
-.friend__item,
-.cheers__item {}
-.row-pic {
-    width: 50px;
-    height: 50px;
-}
-.row-body {
-    padding-left: 20px;
-}
-.row-body h4 {
-    max-width: 150px;
-}
-.row-date {
-    display: none!important;
-}
-.pika-single {
-    width: 100%!important;
-    /* left: 0!important; */
-    right: 0!important;
-    bottom: -2px!important;
-    top: auto!important;
-    box-sizing: border-box!important;
-    padding: 0!important;
-    transform: translate(-50%, 0)!important;
-    left: 50%!important;
-}
-.pika-lendar {
-    width: 100%!important;
-    margin: 0!important;
-    padding: 20px!important;
-    box-sizing: border-box!important;
-}
-.hourpicker {
-    width: 100%!important;
-    left: 0!important;
-    right: 0!important;
-    top: auto;
-    box-sizing: border-box;
-}
-.hourpicker-col {
-    margin: 0 2px!important;
-}
-.pika-prev,
-.pika-next {
-    width: auto!important;
-    background: none!important;
-}
-.app-subheader.x--search {
-    background: rgba( 255, 255, 255, .85)!important;
-}
-.search-user .user-online {
-    bottom: 80px!important;
-    right: 10px!important;
-    position: absolute!important;
-    width: 16px!important;
-    height: 16px;
-}
-.disconnected {
-    padding: 0 10px!important;
-    width: 100%!important;
-}
-.disconnected__title {
-    font-size: 36px!important;
-}
-.slide {
-    top: 0!important;
-    z-index: 1000!important;
-    height: 100%!important;
-    overflow: scroll!important;
-}
-.row-pic__icon {
-    width: 20px!important;
-    height: 20px!important;
-    border: 2px solid!important;
-}
-.map__icon.x--create-before {
-    top: 80px!important;
-}
-.search-users {
-    margin-top: 10px!important;
-}
-.app__menu-item:not(.x--active):hover .app__menu-icon {
-    color: inherit!important;
-}
-.search-filters {
-    padding-bottom: 0!important;
-}
-.be-create-row__input input {
-    border: none!important;
-    border-bottom: 1px solid #eee!important;
-}
-.chat-inview-footer button {
-    display: flex!important
-}
-.search-filters-section {
-    margin-bottom: 40px!important;
-}
-.user-infos {
-    position: relative!important;
-    top: 0px!important;
-}
-.me-item .action {
-    top: -20px!important;
-}
+    .picture-icon {
+        display: none;
+    }
+    .picture-icon i {
+        /* display: none; */
+    }
+    input,
+    textarea,
+    .settings-input__label {
+        font-size: 13px!important;
+    }
+    .settings-input__label.x--settings-btn {
+        display: none!important;
+    }
+    .invite-friends-popup {
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height: 220px;
+        flex-flow: column nowrap;
+        background: rgba(255, 255, 255, .8);
+    }
+    .invite-friends-popup > div {
+        margin: 10px 0;
+    }
+    .invite-friends-popup-message {
+        text-align: center;
+        margin: 10px 0;
+        flex-shrink: 0;
+    }
+    .friend__item,
+    .cheers__item {}
+    .row-pic {
+        width: 50px;
+        height: 50px;
+    }
+    .row-body {
+        padding-left: 20px;
+    }
+    .row-body h4 {
+        max-width: 150px;
+    }
+    .row-date {
+        display: none!important;
+    }
+    .pika-single {
+        width: 100%!important;
+        /* left: 0!important; */
+        right: 0!important;
+        bottom: -2px!important;
+        top: auto!important;
+        box-sizing: border-box!important;
+        padding: 0!important;
+        transform: translate(-50%, 0)!important;
+        left: 50%!important;
+    }
+    .pika-lendar {
+        width: 100%!important;
+        margin: 0!important;
+        padding: 20px!important;
+        box-sizing: border-box!important;
+    }
+    .hourpicker {
+        width: 100%!important;
+        left: 0!important;
+        right: 0!important;
+        top: auto;
+        box-sizing: border-box;
+    }
+    .hourpicker-col {
+        margin: 0 2px!important;
+    }
+    .pika-prev,
+    .pika-next {
+        width: auto!important;
+        background: none!important;
+    }
+    .app-subheader.x--search {
+        background: rgba( 255, 255, 255, .85)!important;
+    }
+    .search-user .user-online {
+        bottom: 80px!important;
+        right: 10px!important;
+        position: absolute!important;
+        width: 16px!important;
+        height: 16px;
+    } 
+    .disconnected {
+        padding: 0 10px!important;
+        width: 80%!important;
+    }
+    .disconnected__title {
+        font-size: 36px!important;
+    }
+    .slide {
+        top: 0!important;
+        z-index: 1000!important;
+        height: 100%!important;
+        overflow: scroll!important;
+    }
+    .row-pic__icon {
+        width: 20px!important;
+        height: 20px!important;
+        border: 2px solid!important;
+    }
+    .map__icon.x--create-before {
+        top: 80px!important;
+    }
+    .search-users {
+        margin-top: 10px!important;
+    }
+    .app__menu-item:not(.x--active):hover .app__menu-icon {
+        color: inherit!important;
+    }
+    .search-filters {
+        padding-bottom: 0!important;
+    }
+    .be-create-row__input input {
+        border: none!important;
+        border-bottom: 1px solid #eee!important;
+    }
+    .chat-inview-footer button {
+        display: flex!important
+    }
+    .search-filters-section {
+        margin-bottom: 40px!important;
+    }
+    .user-infos {
+        position: relative!important;
+        top: 0px!important;
+    }
+    .me-item .action {
+        top: -20px!important;
+    }
 
-.be-request {
-    position: static;
-    flex-shrink: 0;
-    height: 100px;
-    background: none!important;
-}
-.be-usernames {
-    flex-shrink: 0;
-    height: 70px;
-}
+    .be-request,
+    .be-ended {
+        position: static;
+        flex-shrink: 0!important;
+        height: 100px!important;
+        background: none!important;
+    }
+    .be-usernames {
+        flex-shrink: 0!important;
+        height: 70px!important;
+    }
 
-.be-inview-address {
-    flex-shrink: 0;
-}
+    .be-inview-address {
+        flex-shrink: 0!important;
+    }
 
-.be-pictures {
-}
+    .user-pics {
+        padding-bottom: 100%!important;
+        height: 0!important;
+    }
+
+    .chat-row-infos__name .x--name {
+        width: 80px!important;
+    }
+
+    .chat-row-pictures {
+        margin-left: 10px!important;
+    }
+
+    .be-pictures {
+        width: 240px!important;
+        height: 240px!important
+    }
 }
