--- a/public/css/src/landing/landing.css
+++ b/public/css/src/landing/landing.css
@@ -113,13 +113,14 @@
     flex-shrink: 0;
     position: relative;
 }
-
+ 
 .landing__phone {
     position: absolute;
     width: 150px;
     top: 160px;
-    left: 50%;
-    transform: translate(-50%,0);
+    left: 0;
+    right: 0;
+    margin: 0 auto;
     z-index: 1;
     padding: 0 40px;
 }
