--- a/public/css/src/search/search.css
+++ b/public/css/src/search/search.css
@@ -156,9 +156,14 @@
 }
 
 .search-user__pic-overlay i {}
-
+ 
 .search-user .user-online {
     z-index: 10;
+    position: absolute;
+    top: -30px;
+    right: 10px;
+    width: 20px;
+    height: 20px;
 }
 
 .search-user__pic img {
