--- a/public/css/src/common.css
+++ b/public/css/src/common.css
@@ -1150,6 +1150,7 @@ button:hover {
     width: 400px;
     display: flex;
     flex-flow: column nowrap;
+    max-height: 90%;
 }
 
 .modal.x--facebook {
